--- a/src/components/Layout/SideBar/sidebar.module.scss
+++ b/src/components/Layout/SideBar/sidebar.module.scss
@@ -1,5 +1,6 @@
 .sidebar {
     width: 230px;
+    flex-shrink: 0;
     min-height: 100vh;
     background-color: #2a3f54;
     color: white;
@@ -105,7 +106,7 @@
             &::before {
                 background: #425668;
                 bottom: auto;
-                content: "";
+                content: '';
                 height: 8px;
                 left: 22px;
                 margin-top: 20px;
@@ -120,7 +121,7 @@
             &::after {
                 border-left: 1px solid #425668;
                 bottom: 0;
-                content: "";
+                content: '';
                 left: 22px;
                 position: absolute;
                 top: 0;
