--- a/src/components/Layout/SideBar/sidebar.module.scss
+++ b/src/components/Layout/SideBar/sidebar.module.scss
@@ -4,6 +4,7 @@
     min-height: 100vh;
     background-color: #2a3f54;
     color: white;
+    position: fixed;
 
     &-title {
         text-overflow: ellipsis;
